# Compacta

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
sample_data/arab_bam_30contigs/: README.txt  arabidopsis30Contigs.fa  subset.txt
sample_data/arab_bam_30contigs/Reads/: sample_01_1.fasta  sample_01_2.fasta  sample_02_1.fasta  sample_02_2.fasta  sample_03_1.fasta  sample_03_2.fasta
sample_data/arab_bam_30contigs/bam_files/: arsample1.bam  arsample2.bam  arsample3.bam
sample_data/arab_bam_30contigs/bam_files/compactaOutput/: arabidopsis_30Contigs_clusters.txt  arabidopsis_30Contigs_counts.txt  arabidopsis_30Contigs_status.txt  arabidopsis_30Contigs_subset_clusters.txt  arabidopsis_30Contigs_subset_counts.txt  arabidopsis_30Contigs_subset_status.txt
sample_data/arab_bam_30contigs/compacta_files/: arabSample.comed  arabSample.comtr
sample_data/arab_bam_30contigs/compacta_files/compactaOutput/: arabidopsis_30Contigs_reads_clusters.txt  arabidopsis_30Contigs_reads_counts.txt  arabidopsis_30Contigs_reads_preclusters.txt
sample_data/arab_fasta_histones/: README.txt  arabidopsisHistones.fa
sample_data/arab_fasta_histones/Compacta_Files/: arabHistones.comed  arabHistones.comtr
sample_data/arab_fasta_histones/Compacta_Files/CompactaOutput/: arab_histones_clusters.txt  arab_histones_counts.txt
sample_data/arab_fasta_histones/Reads/: sample_01_1.fasta  sample_01_2.fasta  sample_02_1.fasta  sample_02_2.fasta  sample_03_1.fasta  sample_03_2.fasta
sample_data/arab_fasta_histones/bam_Files/: arab_Test_clusters.txt  arab_Test_counts.txt  arab_Test_preclusters.txt  arab_Test_status.txt  arab_histone_sample1.bam  arab_histone_sample2.bam  arab_histone_sample3.bam  arab_histone_test_d0_clusters.txt  arab_histone_test_d0_counts.txt  arab_histone_test_d0_status.txt  arab_histone_test_d1_clusters.txt  arab_histone_test_d1_counts.txt  arab_histone_test_d1_status.txt
src/: Cluster.h  ClusterTree.h  Clusterizer.cpp  Clusterizer.h  Compacta.cpp  Edge.h  EdgeHeap.cpp  EdgeHeap.h  EdgeList.cpp  EdgeList.h  Heap.h  Read.cpp  Read.h  ReadList.cpp  ReadList.h  Transcript.cpp  Transcript.h  TranscriptList.cpp  TranscriptList.h  heap.cpp
