AUTOMAKE_OPTIONS = subdir-objects
bin_PROGRAMS = Compacta

Compacta_SOURCES = \
	src/Compacta.cpp \
	src/Cluster.h \
	src/ClusterTree.h \
	src/Clusterizer.cpp \
	src/Clusterizer.h \
	src/Edge.h \
	src/EdgeHeap.cpp \
	src/EdgeHeap.h \
	src/EdgeList.cpp \
	src/EdgeList.h \
	src/Heap.h \
	src/Read.cpp \
	src/Read.h \
	src/ReadList.cpp \
	src/ReadList.h \
	src/Transcript.cpp \
	src/Transcript.h \
	src/TranscriptList.cpp \
	src/TranscriptList.h \
	src/heap.cpp 
